samples/_failures_safe/1761196484_92b2be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2fa229d.c: In function ‘main’:
./samples/SAFE/__tmp_b2fa229d.c:164:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  164 |     GraphAlgorithm algorithms[]
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_b2fa229d.c:164:5: error: expected declaration or statement at end of input
